[package]
name = "sekurak_hex_gynvael"
authors = ["Paweł Kraszewski"]
description = "Przykładowe kody w języku Rust dla zagadnień poruszanych przez Gynvaela Coldwinda na szkoleniu HEX"
version = "1.0.0"
edition = "2021"

[dependencies]

# Możliwość robienia szablonów po generycznych liczbach
# Nam przydatny jest trait "num::PrimInt"
num = "^0.4"

# Możliwość robienia ENUM-ów z rzutowaniem na/z typów
# całkowitych
num_enum = { version = "^0.7" }

# Bardziej sensowna obsługa błędów
color-eyre = { version = "^0.6" }
eyre = { version = "^0.6" }

# Logi dla narzędzi, np unzip
log="^0.4"
env_logger = "^0.10"

# Obsługa kompresji
flate2 = { version = "^1.0" }

# Liczby losowe
rand = { version = "0.8" }

# Parser argumentów
clap = { version = "^4", features = ["derive"] }

# Normalizacja ścieżek
normalize-path = { version = "^0.2" }
